# racers

./: .dockerignore  .eslintrc.json  .gitignore  .vercelignore  APP_PLATFORM_DEPLOYMENT.md  AWS_DEPLOYMENT.md  BACKEND_COMPLETE.md  CLIENT_DELIVERY_GUIDE.md  CLIENT_DEMO_SCRIPT.md  COPY_PASTE_COMMANDS.md  DEPLOYMENT_GUIDE.md  DIGITALOCEAN_APP_PLATFORM.md  Dockerfile  ENVIRONMENT_SETUP.md  FINAL_CHECKLIST.md  HOSTINGER_DEPLOYMENT.md  MILESTONE_2_SUCCESS.md  MILESTONE_2_TESTING.md  MILESTONE_DELIVERY.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  SOLANA_DEPLOYMENT.md  TESTING_GUIDE.md  WALLET_TEST_QUICK.md  add-user-balance.sql  app-spec.yaml  aws-ecs-task-definition.json  build.js  buildspec.yml  chat-realtime.js  debug-websocket.html  docker-compose.production.yml  docker-compose.yml  env.example  env.production  generate-wallet.js  index-test.html  index.html  light-theme-demo.html  (+24 more)
backend/: README.md  docker-compose.yml  env  env.example  nginx.conf  package-lock.json  package.json  prometheus.yml  server.js  test-server.js
frontend-refactor/: script.js
lib/: privy.js  pusher.js  redis.js
nginx/: nginx.conf
public/: height-fix.css  index.html  privy-loader.js  styles.css  vercel.json
routes/: api.js  auth.js  bets.js  chat.js  race.js  stats.js
server/: db.js  gameEngine.js  solana.js  transactionListener.js
services/: logger.js  privy.js  redis.js  sentry.js  supabase.js
socket/: chatSocket.js  raceSocket.js
solana-program/: Anchor.toml  Cargo.toml  README.md
solana-program/src/: lib.rs
tests/: api.test.js  database.test.js  raceEngine.test.js  (+1 more)
(+31 files in other folders)
