[package]
name = "racers-program"
version = "0.1.0"
edition = "2021"
description = "Racers.fun Solana Program for On-Chain Betting"
license = "MIT"
repository = "https://github.com/racersdotfun/racersdotfun"

[lib]
crate-type = ["cdylib", "lib"]
name = "racers_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = "1.0"
